# milho-sqlite3

./: .gitignore  README.md  build.py  milhosqlite3.spec  milhosqlite3onefile.spec  pyproject.toml  requirements.txt
Scripts/: _build.bat  _build.sh
scripts/: build.bat
src/: Arguments.py  index.py  menu.py  milhosqlite3.py
src/commands/: Execute.py  Export.py  Index.py  Load.py  Use.py  __init__.py  fixed_cols_width.py  load_v2.py  manage_databases.py  rpt_files_cols_layout.py  set_current_database.py
src/modules/: subprocess.py
src/tests/: fixedcolswidth_command_test.py  load_command_test.py
src/tests/test_content/: fixed_width_cols.txt  fixed_width_cols_2.txt  teste.csv  teste.db  teste.delimited  teste.sql  teste.xlsx
src/tests/testcases/: load_command_test.py
src/util/: __init__.py  application_flow.py  config.py  database.py  dynamic_dataclass.py  json_handler.py  terminal_quiz.py
