[tool.poetry]
name = "milho-sqlite3"
version = "0.1.0"
description = ""
authors = ["Guilherme S. Magalhães <40049979+Guisilcol@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "milho_sqlite3"}]

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^1.5.2"
tabulate = "^0.9.0"
openpyxl = "^3.0.10"
pyinstaller = "^5.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
